--- a/ProjectPRN/Properties/launchSettings.json
+++ b/ProjectPRN/Properties/launchSettings.json
@@ -13,6 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7179;http://localhost:5169",
+      "launchUrl": "home",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
