--- a/ProjectPRN/ProjectPRN.csproj
+++ b/ProjectPRN/ProjectPRN.csproj
@@ -60,6 +60,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+    <PackageReference Include="X.PagedList" Version="7.9.0" />
   </ItemGroup>
 
 </Project>
